--- a/RainbowSite/templates/backend/base.html
+++ b/RainbowSite/templates/backend/base.html
@@ -64,7 +64,7 @@
                   <nav class="main-menu ">
                     <ul class="menu-area-main">
                       <li class="active"> <a href=" {% url 'home' %}">Home</a> </li>
-                      <li> <a href=" {% url 'blog' %} ">Blog </a> </li>
+                      <li> <a href="#courses">Blog </a> </li>
                       <li> <a href="#about">About us</a> </li>
                       <li> <a href="#learn">Results</a> </li>
                       <li> <a href=" {% url 'gallery' %} ">Gallery</a> </li>
@@ -74,7 +74,7 @@
                  </div>
                </div> 
                <div class="mean-last">
-                       <a href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a> <a href=" {% url 'login' %} ">login</a></div>              
+                       <a href="#"><img src="{% static 'images/search_icon.png' %}" alt="#" /></a> <a href=" {% url 'logout' %} ">logout</a></div>              
              </div>
            </div>
          </div>
