--- a/RainbowSite/templates/frontend/index.html
+++ b/RainbowSite/templates/frontend/index.html
@@ -121,7 +121,7 @@
                             <li><a href="#"><img src="{% static 'icon/fb.png' %}"></a></li>
                             <li><a href="#"><img src="{% static 'icon/tw.png' %}"></a></li>
                             <li><a href="#"><img src="{% static 'icon/lin(2).png' %}"></a></li>
-                            <li><a href="#"><img src="{% static 'icon/instsgram.png' %}"></a></li>
+                            <li><a href="#"><img src="{% static 'icon/instagram.png' %}"></a></li>
                           </ul>
 
                         </div>
