--- a/RainbowSite/templates/frontend/home.html
+++ b/RainbowSite/templates/frontend/home.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 
+  <style>
+    
+  </style>
 <section class="slider_section">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -33,7 +36,7 @@
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                   <div class="images_box">
-                    <figure><img src="{% static 'images/1.png' %}"></figure>
+                    <figure><img src="{% static 'images/students.png' %}"></figure>
                   </div>
                 </div>
               </div>
@@ -56,7 +59,7 @@
 
                 <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                   <div class="images_box">
-                    <figure><img src="{% static 'images/2.png' %}"></figure>
+                    <figure><img src="{% static 'images/read.jpg' %}"></figure>
                   </div>
                 </div>
               </div>
@@ -352,9 +355,7 @@
     <div class="row">
 
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-        <div id="map">
-          
-        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31773.99289180876!2d10.041289033511118!3d5.454999049562893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x105faf8de84d137b%3A0x4a8f004d96abb07b!2sRainbow%20Bilingual%20College%20De%20Letsa!5e0!3m2!1sen!2sit!4v1695936459410!5m2!1sen!2sit" height="500" class="w-100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
