--- a/RainbowSite/templates/frontend/index.html
+++ b/RainbowSite/templates/frontend/index.html
@@ -66,7 +66,7 @@
                       <li class="active"> <a href=" {% url 'home' %}">Home</a> </li>
                       <li> <a href=" {% url 'blog' %} ">Blog </a> </li>
                       <li> <a href="#about">About us</a> </li>
-                      <li> <a href="#learn">Results</a> </li>
+                      <li> <a href="{% url 'result' %}">Results</a> </li>
                       <li> <a href=" {% url 'gallery' %} ">Gallery</a> </li>
                       <li> <a href="#contact">Contact</a> </li>
                      </ul>
